; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/id/extr_id.c_usage.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/id/extr_id.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@isgroups = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"usage: groups [user]\0A\00", align 1
@iswhoami = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [15 x i8] c"usage: whoami\0A\00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"%s\0A%s%s\0A%s\0A%s\0A%s\0A%s\0A%s\0A%s\0A\00", align 1
@.str.3 = private unnamed_addr constant [17 x i8] c"usage: id [user]\00", align 1
@.str.4 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.5 = private unnamed_addr constant [25 x i8] c"       id -G [-n] [user]\00", align 1
@.str.6 = private unnamed_addr constant [13 x i8] c"       id -M\00", align 1
@.str.7 = private unnamed_addr constant [20 x i8] c"       id -P [user]\00", align 1
@.str.8 = private unnamed_addr constant [13 x i8] c"       id -c\00", align 1
@.str.9 = private unnamed_addr constant [26 x i8] c"       id -g [-nr] [user]\00", align 1
@.str.10 = private unnamed_addr constant [20 x i8] c"       id -p [user]\00", align 1
@.str.11 = private unnamed_addr constant [26 x i8] c"       id -u [-nr] [user]\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @usage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usage() #0 {
  %1 = load i64, i64* @isgroups, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32, i32* @stderr, align 4
  %5 = call i32 (i32, i8*, ...) @fprintf(i32 %4, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %16

6:                                                ; preds = %0
  %7 = load i64, i64* @iswhoami, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %6
  %10 = load i32, i32* @stderr, align 4
  %11 = call i32 (i32, i8*, ...) @fprintf(i32 %10, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  br label %15

12:                                               ; preds = %6
  %13 = load i32, i32* @stderr, align 4
  %14 = call i32 (i32, i8*, ...) @fprintf(i32 %13, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.7, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.8, i64 0, i64 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.9, i64 0, i64 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.10, i64 0, i64 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.11, i64 0, i64 0))
  br label %15

15:                                               ; preds = %12, %9
  br label %16

16:                                               ; preds = %15, %3
  %17 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
